<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="70dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:src="@drawable/loginicon" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/user_login"
            android:drawablePadding="8dp"
            android:hint="@string/usuario_text"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/user_psw"
            android:drawablePadding="8dp"
            android:hint="@string/contra_text"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/loginbtn"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/showPopupButton"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:onClick="showPopup"
            android:text="@string/loginerror"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>